argocd/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-svc
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
