argocd/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: media
  annotations:
    argocd.argoproj.io/health-check: "skip"
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.zion.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr-svc
                port:
                  name: http
